rest: Change TraceManager service to use PathParam
/traces GET returns a list of the open traces
/traces/{trace}
	POST opens the trace
	DELETE disposes and deletes the trace

Reviewed-on: https://git.eclipse.org/r/104030
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
